--- a/apps/logistics-frontend/Pages/Shared/Sidebars/SidebarComponent.razor
+++ b/apps/logistics-frontend/Pages/Shared/Sidebars/SidebarComponent.razor
@@ -92,7 +92,7 @@
         new("Inventories", "/admin/inventories", "layers"),
         new("Reports", "/admin/reports", "clipboard-minus"),
         new("Users", "/admin/users", "users"),
-        new("Create User", "/admin/createuser", "")
+        new("Map", "/admin/map", "")
     };
 
     private List<SidebarMenuItem> DriverMenu => new()
