--- a/apps/logistics-frontend/_Imports.razor
+++ b/apps/logistics-frontend/_Imports.razor
@@ -19,3 +19,4 @@
 @using logistics_frontend.Models.Errors
 @using logistics_frontend.Services
 @using logistics_frontend.Pages.Shared.Layouts
+@using LeafletForBlazor
